<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_large"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/text_title"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/edit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_hint1"
        android:inputType="numberDecimal"
        android:layout_marginBottom="@dimen/margin_xsmall"
        />
    <EditText
        android:id="@+id/edit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_hint2"
        android:inputType="numberDecimal"
        android:layout_marginBottom="@dimen/margin_small"
        />
    <Button
        android:id="@+id/btnP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:layout_marginBottom="@dimen/margin_xsmall"
        />
    <Button
        android:id="@+id/btnDe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deduct"
        android:layout_marginBottom="@dimen/margin_small"
        />
    <Button
        android:id="@+id/btnM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        android:layout_marginBottom="@dimen/margin_small"
        />
    <Button
        android:id="@+id/btnDi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:layout_marginBottom="@dimen/margin_small"
        />
    <Button
        android:id="@+id/btnDivi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dividend"
        android:layout_marginBottom="@dimen/margin_small"/>
    <ImageView
        android:id="@+id/imgView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/dlib"
        />
    <TextView
        android:id="@+id/text_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:textSize="@dimen/textSize_large"
        android:text="@string/text_result"
        android:textColor="@color/red"
        />
</LinearLayout>